--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3'
 services:
   db:
-    build: .
+    build:
+      context: .
+      dockerfile: ./docker/postgres/Dockerfile
     container_name: coin_db
     volumes:
       - ./data:/var/lib/postgresql/data
@@ -11,3 +13,17 @@ services:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: coin_db
+
+  server:
+    build:
+      context: .
+      dockerfile: ./docker/golang/Dockerfile
+    container_name: coin_api
+    depends_on:
+      - db
+    volumes:
+      - .:/go/src/app
+    ports:
+      - "8081:8081"
+    working_dir: /go/src/app
+    command: "go run cmd/coin-api/main.go"
